[metadata]
name = ictoolkit
version = 3.44
description = ictoolkit is designed to be the swiss army knife of programming methods.
author = IncognitoCoding
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/IncognitoCoding/fchecker
classifiers =
    Development Status :: 5 - Production
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Operating System :: Microsoft :: Windows

platforms = any

[options]
python_requires = >= 3.9
zip_safe = False
packages = find_namespace:
include_package_data = True
package_dir =
    =src
install_requires =
	black==22.3.0
    pylint==2.13.9
    fchecker==0.15.5
    fexception==0.3.17
    Jinja2==3.0.3
    cryptography==3.4.6
    Flask==2.0.2
    waitress==2.1.1
    PyYAML==5.4.1

[options.packages.find]
where = src
exclude =
    tests

[bdist_wheel]
universal = 1